<resources>
    <string name="app_name">Password Secure Kiwi</string>

    <string name="no_account">No account details are stored!</string>

    <!-- Catalog Activity "Ordered by" Toolbar area populated by stored preferences -->
    <string name="order_by_toolbar_title">ordered</string>
    <string name="order_by_toolbar_results_found">Results Found</string>

    <!-- Title for the activity to add a new book [CHAR LIMIT=20] -->
    <string name="editor_activity_title_add_account">Add a Account</string>
    <string name="editor_activity_title_edit_account">Edit Account</string>

    <!-- Text Labels for fields in the editor and account exports [CHAR LIMIT=30] -->
    <string name="label_overview">Overview</string>
    <string name="export_accounts_overview">Export Accounts</string>
    <string name="import_accounts_overview">Import Accounts</string>
    <string name="import_accounts_selected"> has been selected!</string>



    <!-- Text hints and units for fields in the editor [CHAR LIMIT=30] -->
    <string name="hint_account_title">Account Type</string>
    <string name="hint_account_password">Password</string>
    <string name="hint_account_user_name">User Name</string>
    <string name="hint_account_notes">Notes...</string>

    <!-- Strings for unknown things [CHAR LIMIT=20] -->
    <string name="currently_unavailable">Currently unavailable</string>

    <!-- Buttons -->
    <string name="btn_download_csv">Download CSV</string>
    <string name="btn_import_csv">Import CSV</string>
    <string name="btn_attach_file">Choose File</string>

    <!-- Toast / Validation messages -->
    <string name="toast_insert_account_failed">Error adding account</string>
    <string name="toast_update_account_failed">Error updating account</string>
    <string name="toast_delete_account_failed">Error deleting account</string>
    <string name="toast_delete_all_accounts_failed">Nothing was deleted</string>
    <string name="toast_insert_account_successful">New account added</string>
    <string name="toast_update_account_successful">Account updated</string>
    <string name="toast_delete_account_successful">Account deleted</string>
    <string name="toast_delete_all_accounts_successful">%1$d accounts have been deleted</string>
    <string name="toast_delete_pin_code">Pin code has been deleted. Please create a new one!</string>
    <string name="toast_required_account_name">Account Type required</string>
    <string name="toast_required_user_name">User Name required</string>
    <string name="toast_required_pass_code">Pass Code required</string>
    <string name="toast_exporting_database">Exporting Database...</string>
    <string name="toast_csv_save_sucessful">CSV file has been saved to Downloads!</string>
    <string name="toast_csv_unsucessful">Export failed</string>
    <string name="toast_csv_import_sucessful">CSV file has imported account details!</string>



    <!-- Instructions for the user -->
    <string name="instruction_required_field">Indicates required fields.</string>
    <string name="login_bttn">LOGIN</string>
    <string name="pin_code">Pass Code</string>
    <string name="create_pin">Create Pin Code</string>
    <string name="digit_pin_4">4 Digit Pin Code</string>
    <string name="digit_pin_4_confirmation">4 Digit Pin Code Confirmation</string>
    <string name="sign_up_info">This pin code will be used to access your account details. Please
        make sure that you remember this code.</string>
    <string name="import_step_1">Step 1: Attach CSV file containing account details with button below.
        The attached filed must be the formatted file downloaded from Password Secure Kiwi.</string>
    <string name="import_step_2">Step 2: Select \'Import CSV\' button</string>


    <!-- Confirmation dialog labels and messages -->
    <string name="delete_dialog_msg">Delete this account?</string>
    <string name="delete_all_dialog_msg">Are you sure you want to delete all accounts in the database?</string>
    <string name="update_pin_code_msg">Are you sure you want to update your pin code?</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="first_open_message_header">Thank you for choosing Password Secure Kiwi!</string>
    <string name="first_open_message">\nThis application prioritizes your privacy and does not store your data anywhere besides physically
        on your device. For full transparency, source code for Password Secure Kiwi can be found on
        <a href="https://github.com/robertyano/password_secure_kiwi">GitHub.</a>\n\nPlease support independent
        developers by recommending Password Secure Kiwi to your family and friends!</string>
    <string name="first_message_confirmation">Got it!</string>
    <string name="export_accounts_intro">To export Password Secure Kiwi\'s data, please follow
        these instructions:</string>
    <string name="export_accounts_steps">\n1. Download data into a CSV file by clicking the button
        at the bottom of this page.\n\n2. Transfer CSV file to new phone. This can
        be done two different ways:\nOption 1: Email the CSV file to yourself and open this file from the
        email on the new phone.\nOption 2: Directly transfer the CSV file from your phone to your computer,
        and then from your computer to your new phone. A great desktop tool for transferring files is
        \'Android File Transfer.\'\n\n3. Open Password Secure Kiwi on your new device.\n\n4.
        Go to the menu and select \'Import Accounts.\'\n\n5. Attach the CSV file with your data and
        select \'Import Accounts.\'
        </string>
    <string name="import_accounts_intro">To import Password Secure Kiwi\'s data, please follow
        these instructions:</string>
    <string name="import_attach_file_selection">Please select a file..</string>







    <!-- Labels for editor menu option [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>

    <!-- Labels for overflow menu options [CHAR LIMIT=20] -->
    <string name="action_add">Add a Account</string>
    <string name="action_delete_all_entries">Delete All Accounts</string>
    <string name="update_pin_code">Update Pin Code</string>
    <string name="view_source_code">View Source Code</string>
    <string name="export_accounts">Export Accounts</string>
    <string name="import_accounts">Import Accounts</string>
    <string name="disable_dark_mode">Disable Dark Mode</string>
    <string name="enable_dark_mode">Enable Dark Mode</string>


    <!-- Asterisk that indicates a required field -->
    <string name="required_field_asterisk" translatable="false">*</string>


    <!-- PREFERENCES STRINGS -->
    <!-- Order preference-->
    <string name="pref_order_by_key" translatable="false">order_by</string>
    <string name="pref_order_by_default" translatable="false">@string/pref_order_by_account_value</string>
    <string name="pref_order_by_account_label">Account</string>
    <string name="pref_order_by_title_label">Title</string>

    <string name="pref_order_by_user_name" translatable="false">user_name</string>
    <string name="pref_order_by_account_value" translatable="false">account_title</string>


    <string name="pref_order_by_direction_title" translatable="false">@null</string>
    <string name="pref_order_by_direction_key" translatable="false">order_by_direction</string>
    <string name="pref_order_by_direction_default" translatable="false">@string/pref_order_by_direction_asc_value</string>
    <string name="pref_order_by_direction_asc_label" translatable="false">Ascending Order</string>
    <string name="pref_order_by_direction_desc_label" translatable="false">Descending Order</string>
    <string name="pref_order_by_direction_asc_value" translatable="false">ASC</string>
    <string name="pref_order_by_direction_desc_value" translatable="false">DESC</string>



</resources>
