<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    tools:context="com.ray.android.passwordsecurekiwi.SignupActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:text="Password Secure Kiwi"
            android:textSize="@dimen/text_size_l"
            android:textColor="@color/darkTextColor"
            android:layout_marginBottom="@dimen/base_dim"/>

        <ImageView android:src="@drawable/kiwi_bird"
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center_horizontal" />


        <!-- Pin Code Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textColorHint="@color/mediumTextColor"
            >

            <EditText android:id="@+id/input_pin_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:password="true"
                android:inputType="phone"
                android:hint="@string/digit_pin_4"
                android:maxLength="4"
                android:textColor="@color/darkTextColor"
                app:backgroundTint="@color/cardview_dark_background"
                android:backgroundTint="@color/cardview_dark_background"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Pin Code Confirmation Label -->

        <!-- Signup Button -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textColorHint="@color/mediumTextColor"
             >

            <EditText
                android:id="@+id/input_pin_code_confirmation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/digit_pin_4_confirmation"
                android:password="true"
                android:inputType="phone"
                android:maxLength="4"
                android:textColor="@color/darkTextColor"
                app:backgroundTint="@color/cardview_dark_background"
                android:backgroundTint="@color/cardview_dark_background"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:text="@string/create_pin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:text="@string/sign_up_info"
            android:textSize="@dimen/text_size_l"
            android:textColor="@color/darkTextColor"
            android:layout_marginBottom="@dimen/base_dim"/>



    </LinearLayout>
</ScrollView>